@@ -2,26 +2,25 @@ package org.folio.rest.impl;
 
 import static org.apache.http.HttpStatus.SC_NOT_FOUND;
 import static org.apache.http.HttpStatus.SC_UNPROCESSABLE_ENTITY;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
-import static org.junit.Assert.assertThat;
 
 import java.util.List;
 
-import io.vertx.ext.unit.junit.VertxUnitRunner;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
 
 import org.folio.rest.jaxrs.model.CustomField;
-import org.folio.rest.jaxrs.model.CustomFieldOptionStatistic;
 import org.folio.rest.jaxrs.model.CustomFieldStatistic;
+import org.folio.support.tags.IntegrationTest;
 
-@RunWith(VertxUnitRunner.class)
-public class CustomFieldStatisticsTest extends CustomFieldTestBase {
+@IntegrationTest
+class CustomFieldStatisticsIT extends CustomFieldTestBase {
 
   @Test
-  public void shouldReturnZeroFieldUsageIfNoValuesAssigned() {
+  void shouldReturnZeroFieldUsageIfNoValuesAssigned() {
     CustomField textField = createTextField();
-    CustomFieldStatistic stat = getWithOk(cfByIdStatsEndpoint(textField.getId())).as(CustomFieldStatistic.class);
+
+    CustomFieldStatistic stat = customFieldsClient.getCustomFieldStats(textField.getId());
 
     assertThat(stat.getFieldId(), equalTo(textField.getId()));
     assertThat(stat.getEntityType(), equalTo(textField.getEntityType()));
@@ -29,11 +28,11 @@ public class CustomFieldStatisticsTest extends CustomFieldTestBase {
   }
 
   @Test
-  public void shouldReturnFieldUsageCountIfValuesAssigned() {
+  void shouldReturnFieldUsageCountIfValuesAssigned() {
     CustomField textField = createTextField();
     assignValue(testUser, textField.getRefId(), "someValue");
 
-    CustomFieldStatistic stat = getWithOk(cfByIdStatsEndpoint(textField.getId())).as(CustomFieldStatistic.class);
+    CustomFieldStatistic stat = customFieldsClient.getCustomFieldStats(textField.getId());
 
     assertThat(stat.getFieldId(), equalTo(textField.getId()));
     assertThat(stat.getEntityType(), equalTo(textField.getEntityType()));
@@ -42,17 +41,16 @@ public class CustomFieldStatisticsTest extends CustomFieldTestBase {
 
   @Test
   @SuppressWarnings("squid:S2699")
-  public void shouldFailIfFieldDoesntExist() {
+  void shouldFailIfFieldDoesntExist() {
     String fakeFieldId = "11111111-1111-1111-a111-111111111111";
-    getWithStatus(cfByIdStatsEndpoint(fakeFieldId), SC_NOT_FOUND);
+    customFieldsClient.attemptGetCustomFieldStats(fakeFieldId).statusCode(SC_NOT_FOUND);
   }
 
   @Test
-  public void shouldReturnZeroFieldOptionUsageIfNoFieldsAssigned() {
+  void shouldReturnZeroFieldOptionUsageIfNoFieldsAssigned() {
     CustomField selectableField = createSelectableField();
-    String optId = selectableField.getSelectField().getOptions().getValues().get(0).getId();
-    String resourcePath = cfByIdOptIdStatsEndpoint(selectableField.getId(), optId);
-    CustomFieldOptionStatistic stats = getWithOk(resourcePath).as(CustomFieldOptionStatistic.class);
+    String optId = selectableField.getSelectField().getOptions().getValues().getFirst().getId();
+    var stats = customFieldsClient.getCustomFieldOptionStats(selectableField.getId(), optId);
 
     assertThat(stats.getOptionId(), equalTo(optId));
     assertThat(stats.getCustomFieldId(), equalTo(selectableField.getId()));
@@ -61,13 +59,12 @@ public class CustomFieldStatisticsTest extends CustomFieldTestBase {
   }
 
   @Test
-  public void shouldReturnFieldOptionUsageIfFieldAssigned() {
+  void shouldReturnFieldOptionUsageIfFieldAssigned() {
     CustomField selectableField = createSelectableField();
-    String optId = selectableField.getSelectField().getOptions().getValues().get(0).getId();
+    String optId = selectableField.getSelectField().getOptions().getValues().getFirst().getId();
     assignValue(testUser, selectableField.getRefId(), List.of(optId));
 
-    String resourcePath = cfByIdOptIdStatsEndpoint(selectableField.getId(), optId);
-    CustomFieldOptionStatistic stats = getWithOk(resourcePath).as(CustomFieldOptionStatistic.class);
+    var stats = customFieldsClient.getCustomFieldOptionStats(selectableField.getId(), optId);
 
     assertThat(stats.getOptionId(), equalTo(optId));
     assertThat(stats.getCustomFieldId(), equalTo(selectableField.getId()));
@@ -76,22 +73,20 @@ public class CustomFieldStatisticsTest extends CustomFieldTestBase {
   }
 
   @Test
-  public void shouldReturnFieldOptionUsageIfFieldAssignedWithSeveralValues() {
+  void shouldReturnFieldOptionUsageIfFieldAssignedWithSeveralValues() {
     CustomField selectableField = createSelectableField();
     String optId0 = selectableField.getSelectField().getOptions().getValues().get(0).getId();
     String optId1 = selectableField.getSelectField().getOptions().getValues().get(1).getId();
     assignValue(testUser, selectableField.getRefId(), optId0, optId1);
 
-    String resourcePath = cfByIdOptIdStatsEndpoint(selectableField.getId(), optId0);
-    CustomFieldOptionStatistic stats = getWithOk(resourcePath).as(CustomFieldOptionStatistic.class);
+    var stats = customFieldsClient.getCustomFieldOptionStats(selectableField.getId(), optId0);
 
     assertThat(stats.getOptionId(), equalTo(optId0));
     assertThat(stats.getCustomFieldId(), equalTo(selectableField.getId()));
     assertThat(stats.getEntityType(), equalTo(selectableField.getEntityType()));
     assertThat(stats.getCount(), equalTo(1));
 
-    resourcePath = cfByIdOptIdStatsEndpoint(selectableField.getId(), optId1);
-    stats = getWithOk(resourcePath).as(CustomFieldOptionStatistic.class);
+    stats = customFieldsClient.getCustomFieldOptionStats(selectableField.getId(), optId1);
 
     assertThat(stats.getOptionId(), equalTo(optId1));
     assertThat(stats.getCustomFieldId(), equalTo(selectableField.getId()));
@@ -101,9 +96,10 @@ public class CustomFieldStatisticsTest extends CustomFieldTestBase {
 
   @Test
   @SuppressWarnings("squid:S2699")
-  public void shouldFailIfFieldOptionDoesntExist() {
+  void shouldFailIfFieldOptionDoesntExist() {
     CustomField selectableField = createSelectableField();
     String fakeFieldOptId = "opt_10";
-    getWithStatus(cfByIdOptIdStatsEndpoint(selectableField.getId(), fakeFieldOptId), SC_UNPROCESSABLE_ENTITY);
+    customFieldsClient.attemptGetCustomFieldOptionStats(selectableField.getId(), fakeFieldOptId)
+        .statusCode(SC_UNPROCESSABLE_ENTITY);
   }
 }
